update readme and homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Factuury</h1>
+<p>Generate an invoice PDF easily.</p>
+<h5>Made by Jeroen Jagt, 2017.</h5>
